--- a/code/gittyup/.gitignore
+++ b/code/gittyup/.gitignore
@@ -16,6 +16,7 @@ parts/
 sdist/
 var/
 wheels/
+share/python-wheels/
 *.egg-info/
 .installed.cfg
 *.egg
@@ -23,8 +24,8 @@ MANIFEST
 
 # Virtual environments
 venv/
-env/
 ENV/
+env/
 .venv
 
 # Testing
@@ -32,8 +33,7 @@ ENV/
 .coverage
 htmlcov/
 .tox/
-.mypy_cache/
-.ruff_cache/
+.nox/
 
 # IDE
 .vscode/
@@ -43,3 +43,18 @@ htmlcov/
 *~
 .DS_Store
 
+# MyPy
+.mypy_cache/
+.dmypy.json
+dmypy.json
+
+# Ruff
+.ruff_cache/
+
+# Local configs
+*.local.yaml
+.gittyup.yaml
+
+# Logs
+*.log
+logs/
