--- a/code/gittyup/pyproject.toml
+++ b/code/gittyup/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "gittyup"
-version = "0.1.0"
+version = "0.2.0"
 description = "CLI tool to automatically update all Git repositories in a directory tree"
 authors = [{name = "Gitty Up Team", email = "info@gittyup.dev"}]
 license = {text = "MIT"}
@@ -29,6 +29,7 @@ dependencies = [
     "colorama>=0.4.6",
     "gitpython>=3.1.40",
     "rich>=13.7.0",
+    "pyyaml>=6.0.1",
 ]
 
 [project.optional-dependencies]
